fix body overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,7 +30,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 // element styling for cards/containers
